# beelife

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/beelife/: main.py
src/beelife/analysis/: data_models.py  graphs.py  llm.py  report_models.py  reports.py  tools.py
src/beelife/api/v1/routers/: analysis.py  beedar.py  devices.py  weather.py
src/beelife/api/v1/schemas/: analysis.py
src/beelife/core/: config.py
src/beelife/db/: models.py  repositories.py  session.py
src/beelife/db/migrations/: env.py
src/beelife/db/migrations/versions/: 4c160c3c823b_add_devices_table.py  6a50c824aff4_make_analysis_reports_datetimes_.py  8d14c43489d0_add_period_start_and_period_end_to_.py  91459feab9e0_make_timestamp_columns_timezone_aware.py  9a7776c7a11f_initial_models_weather_observations_and_.py  b5d779fc903e_add_analysis_reports_table.py
tests/: conftest.py  test_analysis_reports_api.py  test_analysis_tools.py  test_api.py  test_device_repository.py  test_llm_client.py  test_models.py
