[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beelife"
version = "0.1.0"
description = "BeeDar + weather data ingestion, analysis and health summaries — part of the Weathervane ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Dave Caulton", email = "dcaulton@gmail.com" }]
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.30.6",
    "pydantic-settings>=2.7.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.3",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "rich>=13.9.4",
    "python-dotenv>=1.0.1",
    # For charts later
    "matplotlib>=3.9.0",
    "pillow>=10.4.0",
    "mypy>=2.1.0",
    "asyncpg>=0.31.0",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
    "testcontainers[postgres]>=4.8.1",
    "sqlalchemy[mypy]>=2.0.36",
    "pydantic[mypy]>=2.10.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/beelife"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["migrations", "alembic"]
select = ["E", "F", "I", "B", "UP", "RUF", "ANN"]
ignore = ["ANN401"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = false
[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "sqlmodel.*",
    "sqlalchemy.*",
    "alembic.*",
    "uvicorn.*",
    "rich.*",
    "structlog.*",
    "testcontainers.*",
    "matplotlib.*",
    "beelife.db.migrations.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.alembic]
script_location = "src/beelife/db/migrations"
